# cpu-process-limit-windows

./: .gitignore  CPUProcessLimiter.spec  README.md  build_exe.py  main.py  pyproject.toml
src/cpu_process_limit_windows/: __init__.py  cli.py  config.py  core.py  process_list.py  process_metrics.py  settings.py  tray.py  ui.py
