[project]
name = "cpu-process-limit-windows"
version = "0.1.0"
description = "Limit Windows process CPU usage with Win32 Job Object APIs via ctypes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.0",
    "pystray>=0.19.5",
]

[project.scripts]
cpu-limit = "cpu_process_limit_windows.cli:main"
cpu-limit-ui = "cpu_process_limit_windows.ui:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
